--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-contenteditable": "^3.3.7",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
