--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
+    "react-select": "^5.8.0",
     "react-to-print": "^2.14.13",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
